--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -1,49 +1,39 @@
 /* Main container for the header component */
 .header {
-    /* height: 80px; */
-
-    /* background: linear-gradient(135deg, rgb(255, 214, 58) 0%, rgb(186, 149, 0) 100%); */
-    /* background-color: #FFD63A; */
-    background-color: black;
+  background-color: #FFFFFF;
 }
 
 nav {
-    display: flex;
-    justify-content: end;
-    /* gap: 20px; */
-    gap: 1.5em;
+  display: flex;
+  justify-content: end;
+  gap: 1.5em;
+  padding: 1em 2em;
 
-    padding: 8px 24px;
-
-
-    position: fixed;
-    top: 0;
-    /* left: 0; */
-    right: 0;
-    width: 100%;
-    z-index: 10;
-
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  z-index: 10;
 }
 
 nav a {
-    font-size: 14px;
-    font-weight: 700;
-    text-decoration: none;
-    padding: 8px 24px;
-    /* color: #000000; */
-    color: #FFFFFF;
+  font-size: 14px;
+  font-weight: 700;
+  text-decoration: none;
+  padding: 1em 2em;
+  color: #000000;
 }
 
 nav a:hover {
-    color: #FFD63A;
+  color: #1591EA;
 }
 
 /* Overrides the color to black for the MiniUiKit page */
 .headerLight nav a {
-    color: #000000;
+  color: #000000;
 }
 
 /* Overrides hover color for the light background */
 .headerLight nav a:hover {
-    color: #4D4D4D;
+  color: #4D4D4D;
 }
