Add design tokens

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,5 @@
 /* Global styles for the entire application */
 .App {
-  font-family: "Lato", sans-serif;
+  font-family: "Gilroy", sans-serif;
   font-style: normal;
 }
