--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,6 @@
   --font-heading: 'Oswald', sans-serif;
   --font-body: 'Gilroy', sans-serif;
 
-
   /* Font weights */
   --font-normal: 400;
   --font-medium: 500;
@@ -36,8 +35,8 @@
   /* Colors */
   --color-primary: #1591EA;
   --color-accent: #FF9900;
-  --color-background: #000000;
-  --color-text: #f1f1f1;
+  --color-background: #f1f1f1;
+  --color-text: #1d1d1d;
 }
 
 body {
