--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,31 +1,7 @@
 @font-face {
-  font-family: 'Gilroy';
-  src: url('../stories/assets/fonts/Gilroy-Light.woff') format('woff');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Gilroy';
-  src: url('../stories/assets/fonts/Gilroy-Regular.woff') format('woff');
+  font-family: 'Archivo';
+  src: url('../stories/assets/fonts/Archivo-Regular.woff') format('woff');
   font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Gilroy';
-  src: url('../stories/assets/fonts/Gilroy-Medium.woff') format('woff');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Gilroy';
-  src: url('../stories/assets/fonts/Gilroy-Bold.woff') format('woff');
-  font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
