--- a/src/About/About.module.css
+++ b/src/About/About.module.css
@@ -3,17 +3,13 @@
 }
 
 .header {
-  /* font-family: var(--font-heading);
-  font-size: var(--text-sm);
-  font-weight: var(--font-normal); */
   margin-bottom: var(--space-xl);
 }
 
 .headerTitle {
   font-family: var(--font-heading);
-  font-size: var(--text-lg);
+  font-size: var(--text-2xl);
   font-weight: var(--font-normal);
-  /* margin-bottom: var(--space-xl); */
 }
 
 .content {
