--- a/src/About/About.module.css
+++ b/src/About/About.module.css
@@ -2,22 +2,23 @@
   padding: var(--space-2xl);
 }
 
-.header {
-  margin-bottom: var(--space-xl);
+.experience {
+  margin-bottom: var(--space-lg)
 }
 
-.headerTitle {
+.experienceTitle, .toolsTitle {
   font-family: var(--font-heading);
   font-size: var(--text-2xl);
   font-weight: var(--font-normal);
+  border-bottom: 1px solid var(--color-text);
+  width: fit-content;
 }
 
-.content {
+.experienceList, .toolsList {
+  list-style-type: none;
   font-family: var(--font-body);
   font-size: var(--text-lg);
-  font-weight: var(--font-normal);
-  line-height: var(--space-xl);
-  width: 100%;
+  padding: 0;
 }
 
 .fullHeight {
