--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,8 @@
   --font-body: 'Archivo', serif;
 
   /* Font weights */
+  --font-light: 300;
   --font-normal: 400;
-  --font-medium: 500;
-  --font-semibold: 600;
-  --font-bold: 700;
 
   /* Colors */
   --color-primary: #1591EA;
