--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -5,7 +5,14 @@
   width: 100%;
   z-index: 10;
   background-color: var(--color-background);
-  box-shadow: 0 2px 4px 0 #f1f1f1;
+}
+
+.headerLightShadow {
+  box-shadow: 0 12px 64px 0 #FFFFFF;
+}
+
+.headerDarkShadow {
+  box-shadow: 0 12px 64px 0 #00000031;
 }
 
 nav {
@@ -19,7 +26,7 @@ nav {
   font-family: var(--font-heading);
   font-size: var(--text-lg);
   text-decoration: none;
-  color: #000000;
+  color: var(--color-text);
   padding: var(--space-md);
 }
 
