--- a/src/Header/Header.module.css
+++ b/src/Header/Header.module.css
@@ -57,10 +57,10 @@
   z-index: 10;
   
   /* hidden by default */
-  opacity: 0;
+  opacity: 1;
   pointer-events: none;
   transform: translateX(100%);
-  transition: transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out, opacity 0.6s ease-in-out;;
 }
 
 .mobileMenuOpen {
@@ -117,11 +117,15 @@ nav {
     display: none;
   }
 
+  .logo {
+    margin-left: var(--space-2xl);
+  }
+
   .navDesktop {
     display: flex;
-    /* justify-content: end; */
     gap: var(--space-2xl);
     padding: var(--space-md) var(--space-xl);
+    margin-right: var(--space-2xl);
   }
 
   .navLink {
